Replace awkward List population with List.of()